# for display continuity sake please use 2 spaces instead of tabs

2015-04-06 mmichaud <m.michael.michaud@orange.fr>
  * fix #393 : simple query plugin did not do a deep copy of features
    improve boolean handling in simple query plugin
  * fix #394 : bad geometries produced by CutPolygon Cursor tool

2015-04-05 ede
  * PLUS: update kml driver to 0.2.4
    - reenable loading of kmz files

2015-04-05 mmichaud <m.michael.michaud@orange.fr>
  * Use long/boolean attribute types in jdbc converter
  * Recognize geometry type in more situations

2015-04-02 ede
  * update commons-compress, xz libs
  * unify archive listing, fix 7zip with new commons-compress version

2015-03-31  Giuseppe Aruta (ma15569)  
  * Layer tree tooltip is now configurable via "Configure tooltip"
  * in Option panel.  2 option: Original minimal JUMP/OpenJUMP tooltip
  * and advanced info tooltip.Used different colors (red and blue)
  * to display layer with no datasource and modified layer with datasource   in the tooltips

2015-03-22 Giuseppe Aruta (ma15569) 
  * Added ChangeRangeValuesToNoDataPlugIn.
  * This plugin allowas to change a range of cell values (of a Sextante single
  * band raster layer) to nodata value. An option allowas to extraxt only the
  * input range of value (and set the other values to nodata)

2015-03-22 Giuseppe Aruta (ma15569)
  * RasterImageLayer Plugin: added Raster Layer statistics tab with several info about cell values
  * DEMStaristics: added header with the number of selected raster layers
   
2015-03-22 Giuseppe Aruta (ma15569) 
  * SaveRasterImageAsImagePlugIn. Rewrite class using new RasterImage I/O components
    This version allows to export no nodata cell value to the output tif
  * RasterImage nodata management plugins: added layer statistics resume panel and
    an output file chooser field

2015-03-22 mmichaud <m.michael.michaud@orange.fr>
  * Hide unused AttributeType from the schema.
    Add a way to nullify attribute values in the Attribute panel :